--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,8 @@ html, body {
     position: absolute;
     pointer-events: none; 
     transform: translate3d(50px,50px,0);
-    transition: transform 0.3s cubic-bezier(0, 0.64, 0.52, 0.24);
+    transition: transform 0.3s cubic-bezier(0, 0, 0, 0.24);
+    filter: drop-shadow(5px 5px 5px gray);
 }
 
 .particle {
