--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0px;
-    background-color: #060942;
+    background-image: url("bgstar.png");
 }
 
 #container {
